# ai-prompt-enhancement

./: .env.example  .gitignore  LICENSE  README.md  entrypoint.sh  package-lock.json  project_structure  pyproject.toml
backend/: .env.example  README.md  pyproject.toml  pytest.ini  start_service_help.md  tmp.txt
backend/data/: analysis_history.csv  comparison_history.csv
backend/data/history/: synthetic_data_entries.json
backend/data/synthetic_data_cache/: e39d657d_deepseek-chat_1.json  e39d657d_deepseek-chat_1_68d75e0c.json  e39d657d_deepseek-chat_2.json  e39d657d_deepseek-chat_3.json
backend/data/synthetic_data_history/: generation_20250202_001301_029853.json  generation_20250202_001446_931120.json  generation_20250202_001450_923371.json  generation_20250202_001451_759589.json  generation_20250202_001452_669786.json  generation_20250202_001515_372426.json  generation_20250202_001648_722864.json  generation_20250202_104221_410156.json  generation_20250202_104225_480164.json  generation_20250202_104226_587915.json  generation_20250202_104227_100552.json  generation_20250202_104227_301008.json  generation_20250202_104227_476628.json  generation_20250202_104227_663753.json  generation_20250202_104228_423449.json  generation_20250202_104228_917035.json  generation_20250202_104229_114821.json  generation_20250202_104229_351733.json  generation_20250202_105251_050452.json
backend/src/ai_prompt_enhancement/: __init__.py  main.py
backend/tests/: README.md  conftest.py
backend/tests/api/: test_evaluation.py  test_evaluation.py.bak  test_model.py  (+1 more)
(+115 files in other folders)
